--- a/about.html
+++ b/about.html
@@ -127,6 +127,14 @@
             margin: 10px;
             color: #555;
         }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
     </style>
 </head>
 <body>
@@ -207,15 +215,14 @@
             <h2>Contact Us</h2>
             <p>We are here to help! Feel free to reach out to us:</p>
             <ul>
-                <li>Email: <a href="mailto:support@electronicsgadgets.com">support@electronicsgadgets.com</a></li>
+                <li>Email: <a href="mailto:zaporia@electronicsgadgets.com">zaporia@electronicsgadgets.com</a></li>
                 <li>Phone: +91 98765 43210</li>
-                <li>Address: 123 Tech Avenue, Innovation City</li>
+                <li>Address: 123, Race Course, Gandhipuram, Coimbatore -641 018, Tamil Nadu, India.</li>
             </ul>
         </section>
     </main>
     <footer>
         <p>&copy; 2024 Electronics Gadgets E-Commerce. All rights reserved.</p>
-        <p>Follow us on: <a href="#">Facebook</a> | <a href="#">Twitter</a> | <a href="#">Instagram</a></p>
     </footer>
 </body>
 </html>
