--- a/home.html
+++ b/home.html
@@ -82,6 +82,14 @@
         .carousel-control-next {
             right: 5px;
         }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
         @media (max-width: 768px) {
             header {
                 flex-wrap: wrap;
