--- a/products.html
+++ b/products.html
@@ -115,6 +115,14 @@
             width: 100%;
             bottom: 0;
         }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
     </style>
 </head>
 <body>
@@ -293,6 +301,7 @@
             <p class="price">Price   :  ₹3,508</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
+            <button> Buy Now </button>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
