--- a/products.html
+++ b/products.html
@@ -123,6 +123,20 @@
             from { opacity: 0; transform: translateY(20px); }
             to { opacity: 1; transform: translateY(0); }
         }
+        @media (max-width: 768px) {
+            header {
+                flex-wrap: wrap;
+            }
+            header img {
+                margin-bottom: 10px;
+            }
+            header .search-bar {
+                margin: 10px 0;
+            }
+            nav a {
+                margin: 0 10px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -146,7 +160,7 @@
             <p class="rating">Rating<br>★★★★☆</p>
             <br><br><br>
             <button>Add to Cart</button>
-            <button>Buy Now</button>
+            <button> Buy Now </button>
         </div>
         <div class="product">
             <img src="creatathon/tab.jpg" alt="tab" height="35%">
@@ -156,7 +170,7 @@
             <p class="rating">Rating <br>★★★★☆</p>
             <br>
             <button>Add to Cart</button>
-            <button>Buy Now</button>
+            <button> Buy Now </button>
         </div>
         <div class="product">
             <img src="creatathon/lapto.jpg" alt="laptop" height="35%">
@@ -164,7 +178,7 @@
             <p class="price">Price   :  ₹  ₹38,240</p>
             <p class="rating">Rating<br>★★★★★</p>
             <button>Add to Cart</button>
-            <button>Buy Now</button>
+            <button> Buy Now </button>
         </div>
         <div class="product">
             <img src="creatathon/smartwatch.jpg" alt="smart watch">
@@ -172,7 +186,7 @@
             <p class="price">Price   :  ₹7,999</p>
             <p class="rating">Rating <br>★★★★☆</p>
             <button>Add to Cart</button>
-            <button>Buy Now</button>
+            <button> Buy Now </button>
         </div>
         <div class="product">
             <img src="creatathon/realme buds.jpg" alt="airpods" height="43%">
@@ -180,7 +194,7 @@
             <p class="price">Price   :   ₹1,200</p>
             <p class="rating">Ratings:<br>★★★★★</p>
             <button>Add to Cart</button>
-            <button>Buy Now</button>
+            <button> Buy Now </button>
         </div>
         <div class="product">
             <img src="creatathon/nikon camera.jpg" alt="camera"  height="47%">
@@ -189,7 +203,7 @@
             <p class="rating">Rating <br>★★★★☆</p>
             <br><br>
             <button>Add to Cart</button>
-            <button>Buy Now</button>
+            <button> Buy Now </button>
         </div>
         <div class="product">
             <img src="creatathon/Drone.jpg" alt="drone">
@@ -197,7 +211,7 @@
             <p class="price">Price   :  ₹2,800</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
-            <button>Buy Now</button>
+            <button> Buy Now </button>
         </div>
         <div class="product">
             <img src="creatathon/VRheadset.jpg" alt="vrheadset"  height="50%">
@@ -214,7 +228,7 @@
             <p class="price">Price   :  ₹2,149</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
-            <button> Buy Now </button>
+            <button> Buy Now  </button>
         </div>
         <div class="product">
             <img src="creatathon/Alexa.jpg" alt="alexa">
@@ -242,7 +256,7 @@
             <p class="rating">Rating<br>★★★★☆</p>
             <br><br><br>
             <button>Add to Cart</button>
-            <button> Buy Now </button>
+            <button> Buy Now  </button>
         </div>
         <div class="product">
             <img src="creatathon/wirelesscharger.jpg" alt="wireless charger">
@@ -251,7 +265,7 @@
             <p class="rating">Rating<br>★★★★☆</p><br>
             <br><br><br>
             <button>Add to Cart</button>
-            <button> Buy Now </button>
+            <button> Buy Now  </button>
         </div>
         <div class="product">
             <img src="creatathon/Smart thermostat.jpg" alt="thermostat">
@@ -271,7 +285,7 @@
             <p class="rating">Rating<br>★★★★☆</p>
             <br><br><br>
             <button>Add to Cart</button>
-            <button> Buy Now </button>
+            <button>Buy Now </button>
         </div>
         <div class="product">
             <img src="creatathon/smart doorbell.jpg" alt="doorbell" height="50%">
@@ -279,7 +293,7 @@
             <p class="price">price   :  ₹2,099</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
-            <button> Buy Now </button>
+            <button> Buy Now  </button>
         </div>
         <div class="product">
             <img src="creatathon/Amazon Firestick.jpg" alt="fire stick"  height="50%">
@@ -295,7 +309,7 @@
             <p class="price">Price   :  ₹6,149</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
-            <button> Buy Now </button>
+            <button>Buy Now </button>
         </div>
         <div class="product">
             <img src="creatathon/digital locks.jpg" alt="smart lock">
@@ -303,7 +317,7 @@
             <p class="price">Price   :  ₹12,129</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
-            <button> Buy Now </button>
+            <button>Buy Now </button>
         </div>
         <div class="product">
             <img src="creatathon/smart plug.jpg" alt="smart plug">
@@ -311,25 +325,32 @@
             <p class="price">Price   :  ₹3,508</p>
             <p class="rating">Rating<br>★★★★☆</p>
             <button>Add to Cart</button>
-            <button> Buy Now </button>
+            <button> Buy Now  </button>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        const buttons = document.querySelectorAll('.product button');
+<script>
+    const buttons = document.querySelectorAll('.product button');
 
-        buttons.forEach(button => {
-            if (button.textContent.includes('Add to Cart')) {
-                button.addEventListener('click', () => {
-                    alert('Added to cart!');
-                });
-            } else if (button.textContent.includes('Buy Now')) {
-                button.addEventListener('click', () => {
-                    alert('Buy now');
-                });
-            }
-        });
-    </script>
+    buttons.forEach(button => {
+        if (button.textContent.includes('Add to Cart')) {
+            button.addEventListener('click', () => {
+                alert('Added to cart!');
+            });
+        }
+    });
+
+    const buyNowButtons = document.querySelectorAll('.product button');
+
+    buyNowButtons.forEach(button => {
+        if (button.textContent.includes('Buy Now')) {
+            button.addEventListener('click', () => {
+                alert('Thank you for your purchase!');
+                window.location.href = 'products.html';
+            });
+        }
+    });
+</script>
 </body>
 </html>
