--- a/products.html
+++ b/products.html
@@ -124,6 +124,7 @@
             <p class="price">$699</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 2">
@@ -132,6 +133,7 @@
             <p class="price">$499</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 3">
@@ -140,6 +142,7 @@
             <p class="price">$999</p>
             <p class="rating">★★★★★</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 4">
@@ -148,6 +151,7 @@
             <p class="price">$199</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 5">
@@ -156,6 +160,7 @@
             <p class="price">$299</p>
             <p class="rating">★★★★★</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 6">
@@ -164,6 +169,7 @@
             <p class="price">$799</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 7">
@@ -172,6 +178,7 @@
             <p class="price">$599</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 8">
@@ -180,6 +187,7 @@
             <p class="price">$399</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 9">
@@ -188,6 +196,7 @@
             <p class="price">$149</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 10">
@@ -196,6 +205,7 @@
             <p class="price">$129</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 11">
@@ -204,6 +214,7 @@
             <p class="price">$99</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 12">
@@ -212,6 +223,7 @@
             <p class="price">$29</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 13">
@@ -220,6 +232,7 @@
             <p class="price">$49</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 14">
@@ -228,6 +241,7 @@
             <p class="price">$199</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 15">
@@ -236,6 +250,7 @@
             <p class="price">$299</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 16">
@@ -244,6 +259,7 @@
             <p class="price">$149</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 17">
@@ -252,6 +268,7 @@
             <p class="price">$49</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 18">
@@ -260,6 +277,7 @@
             <p class="price">$299</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 19">
@@ -268,6 +286,7 @@
             <p class="price">$199</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
         </div>
         <div class="product">
             <img src="https://via.placeholder.com/250" alt="Gadget 20">
@@ -276,6 +295,7 @@
             <p class="price">$29</p>
             <p class="rating">★★★★☆</p>
             <button>Add to Cart</button>
+            <button>Buy Now</button>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
